<resources>
    <string name="app_name">Click</string>
    <string name="custom_toolbar_layout_tab_item_chat_name">Chat</string>
    <string name="custom_toolbar_layout_tab_item_group_name">Group</string>
    <string name="custom_toolbar_layout_tab_item_friend_request_name">Requests</string>
    <string name="login_activity_enter_email_edit_text">Enter your email here</string>
    <string name="login_activity_enter_password_edit_text">Enter password here</string>
    <string name="login_activity_log_in_button">Log in</string>
    <string name="login_activity_do_not_have_account_text_view">Do not have account?</string>
    <string name="login_activity_sign_up_button">Sign up</string>
    <string name="login_activity_email_address_text_view">Email address</string>
    <string name="login_activity_password_text_view">Password</string>
    <string name="login_activity_app_name_click_text_view">Click</string>
    <string name="sign_up_activity_sign_up_text_view">Sign up</string>
    <string name="sign_up_activity_already_member_text_view">Already a member?</string>
    <string name="sign_up_activity_go_to_login_activity_button">Log in</string>
    <string name="sign_up_activity_name_edit_text">Name</string>
    <string name="sign_up_activity_sure_name_edit_text">Surname</string>
    <string name="sign_up_activity_enter_email_edit_text">Email</string>
    <string name="sign_up_activity_enter_password_edit_text">Create password</string>
    <string name="sign_up_activity_enter_password_again_edit_text">Enter password again</string>
    <string name="sign_up_activity_sign_up_button">Sign up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_menu_find_friends">Find friends</string>
    <string name="main_menu_sign_out">Sign out</string>
    <string name="main_menu_settings">Settings</string>
    <string name="settings_activity_name_text_view">Name</string>
    <string name="settings_activity_name_edit_text">Your name here</string>
    <string name="settings_activity_about_text_view">About</string>
    <string name="settings_activity_about_edit_text">Hey! I am using Click.</string>
    <string name="settings_activity_phone_text_view">Phone</string>
    <string name="settings_activity_mobile_number_text_view">Your mobile number here</string>
    <string name="settings_activity_update_profile_button">Update</string>
    <string name="login_activity_phone_authentication_button">Phone</string>
    <string name="phone_login_activity_enter_mobile_number_edit_text">Enter mobile number here</string>
    <string name="phone_login_activity_enter_sent_code_edit_text">Enter verification code here</string>
    <string name="phone_login_activity_send_verification_code_button">Send code</string>
    <string name="phone_login_activity_verify_button">Verify</string>
    <string name="friend_request_activity_name_text_view">Name</string>
    <string name="friend_request_activity_about_text_view">About</string>
    <string name="friend_request_activity_send_or_cancel_request_button">Send request</string>
    <string name="friends_row_name_text_view">Name</string>
    <string name="friends_row_about_text_view">About</string>
    <string name="friend_accept_cancel_row_cancel_request_button">Cancel request</string>
    <string name="chat_activity_type_a_message_edit_text">Type a message</string>
    <string name="message_row_receiver_name_text_view">Name</string>
    <string name="message_row_receiver_message_text_view">Receiver message</string>
    <string name="message_row_receiver_time_and_date_text_view">Time</string>
    <string name="message_row_sender_message_text_view">sender message here</string>
    <string name="friends_row_last_seen_text_view">Last seen :</string>
    <string name="select_friend_to_group_text_view">Name</string>
    <string name="group_toolbar_new_group_text_view">New group</string>
    <string name="group_toolbar_add_text_view">Add</string>
    <string name="custom_add_group_subject_dialog_name_edit_text">Type group subject here...</string>
    <string name="custom_add_group_subject_dialog_text_view">Provide a group subject and optional group icon</string>
</resources>