<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainActivityContainerId"
    tools:context=".activities.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mainActivityAppBarLayoutId">

        <include
            android:id="@+id/mainActivityActionBarId"
            layout="@layout/custom_toolbar_layout"/>

        <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mainActivityTabLayoutId">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mainActivityTabItemChatNameId"
                android:text="@string/custom_toolbar_layout_tab_item_chat_name"/>
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mainActivityTabItemGroupNameId"
                android:text="@string/custom_toolbar_layout_tab_item_group_name"/>
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mainActivityTabItemFriendRequestNameId"
                android:text="@string/custom_toolbar_layout_tab_item_friend_request_name"/>
        </com.google.android.material.tabs.TabLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainActivityViewPagerId"
        android:layout_below="@id/mainActivityAppBarLayoutId"/>

</RelativeLayout>